--- a/src/pages/es/index.html
+++ b/src/pages/es/index.html
@@ -5,23 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristina Fuentes - Desarrolladora Frontend & Especialista en Accesibilidad</title>
     <meta name="description" content="Portfolio de Cristina Fuentes - Desarrolladora Frontend especializada en accesibilidad web y análisis de datos">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../../assets/css/main.css">
 </head>
 <body>
-<!-- Skip Link mejorado -->
+<!-- Skip Link -->
 <a href="#main-content" class="skip-link">
     <span class="skip-icon">⚡</span>
-    Saltar al contenido principal
+    Saltar al contenido
 </a>
 
-<!-- Navegación Mejorada -->
+<!-- Navegación -->
 <nav class="navbar" aria-label="Navegación principal">
     <div class="nav-container">
-                <!-- Branding con bandera -->
+
+        <!-- Branding con bandera -->
         <div class="nav-brand">
             <a href="index.html" class="brand-link">
                 <h1>Cristina Fuentes</h1>
-                <img src="assets/icons/gb.svg" alt="English" class="language-flag">
+                <img src="../../assets/icons/es-variant.svg" alt="Español" class="language-flag">
             </a>
         </div>
 
@@ -48,26 +49,26 @@
                 <ul class="dropdown-menu" aria-labelledby="language-toggle">
                     <li>
                         <a href="index.html" class="dropdown-item active" data-lang="es">
-                            <img src="assets/icons/es-variant.svg" alt="Español" class="flag-icon">
+                            <img src="../../assets/icons/es-variant.svg" alt="Español" class="flag-icon">
                             Español
                         </a>
                     </li>
                     <li>
-                        <a href="en/index.html" class="dropdown-item" data-lang="en">
-                            <img src="assets/icons/gb.svg" alt="English" class="flag-icon">
+                        <a href="../en/index.html" class="dropdown-item" data-lang="en">
+                            <img src="../../assets/icons/gb.svg" alt="English" class="flag-icon">
                             English
                         </a>
                     </li>
                     <li>
-                        <a href="fr/index.html" class="dropdown-item" data-lang="fr">
-                            <img src="assets/icons/fr.svg" alt="Français" class="flag-icon">
+                        <a href="../fr/index.html" class="dropdown-item" data-lang="fr">
+                            <img src="../../assets/icons/fr.svg" alt="Français" class="flag-icon">
                             Français
                         </a>
                     </li>
                 </ul>
             </div>
 
-            <!-- Selector de Tema (SOLO colores) -->
+            <!-- Selector de Tema -->
             <div class="dropdown theme-dropdown">
                 <button class="nav-button dropdown-toggle"
                         id="theme-toggle"
@@ -77,26 +78,31 @@
                     <span class="button-text">Tema</span>
                 </button>
                 <ul class="dropdown-menu theme-menu" aria-labelledby="theme-toggle">
-                    <li><button class="dropdown-item theme-option" data-theme="light">
-                        <span class="theme-preview light-theme"></span>
-                        🌞 Claro
-                    </button></li>
-                    <li><button class="dropdown-item theme-option" data-theme="dark">
-                        <span class="theme-preview dark-theme"></span>
-                        🌙 Oscuro
-                    </button></li>
-                    <li><button class="dropdown-item theme-option" data-theme="sepia">
-                        <span class="theme-preview sepia-theme"></span>
-                        📜 Sepia
-                    </button></li>
-                    <li><button class="dropdown-item theme-option" data-theme="gray-scale">
-                        <span class="theme-preview gray-theme"></span>
-                        ⚪ Escala de Grises
-                    </button></li>
-                    <li><button class="dropdown-item theme-option" data-theme="high-contrast">
-                        <span class="theme-preview contrast-theme"></span>
-                        ⚫ Alto Contraste
-                    </button></li>
+                    <li>
+                        <button class="dropdown-item theme-option" data-theme="light">
+                            <span class="theme-preview light-theme" data-theme="light"></span>
+                            🌞 Claro
+                        </button></li>
+                    <li>
+                        <button class="dropdown-item theme-option" data-theme="dark">
+                            <span class="theme-preview dark-theme" data-theme="dark"></span>
+                            🌙 Oscuro
+                        </button></li>
+                    <li>
+                        <button class="dropdown-item theme-option" data-theme="sepia">
+                            <span class="theme-preview sepia-theme" data-theme="sepia"></span>
+                            📜 Sepia
+                        </button></li>
+                    <li>
+                        <button class="dropdown-item theme-option" data-theme="gray-scale">
+                            <span class="theme-preview gray-theme" data-theme="gray-scale"></span>
+                            ⚪ Escala de Grises
+                        </button></li>
+                    <li>
+                        <button class="dropdown-item theme-option" data-theme="high-contrast">
+                            <span class="theme-preview contrast-theme" data-theme="high-contrast"></span>
+                            ⚫ Alto Contraste
+                        </button></li>
                 </ul>
             </div>
 
@@ -111,13 +117,18 @@
                 </button>
                 <ul class="dropdown-menu accessibility-menu" aria-labelledby="accessibility-toggle">
                     <!-- Movimiento Reducido -->
-                    <li class="accessibility-option">
+                    <li class="accessibility-option motion-intensity">
                         <div class="option-header">
                             <span class="option-title">Movimiento Reducido</span>
                             <label class="toggle-switch">
                                 <input type="checkbox" id="reduced-motion-toggle">
                                 <span class="toggle-slider"></span>
                             </label>
+                        </div>
+                        <div class="intensity-control" id="motion-intensity-control" style="display: none;">
+                            <span class="intensity-label">Intensidad:</span>
+                            <input type="range" min="1" max="4" value="1" class="intensity-slider" id="motion-intensity">
+                            <span class="intensity-value">1</span>
                         </div>
                     </li>
 
@@ -130,7 +141,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="dyslexia-intensity">
                             <span class="intensity-value">3</span>
@@ -146,7 +157,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="reading-intensity">
                             <span class="intensity-value">3</span>
@@ -162,7 +173,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Intensidad:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="photophobia-intensity">
                             <span class="intensity-value">3</span>
@@ -178,7 +189,7 @@
                                 <span class="toggle-slider"></span>
                             </label>
                         </div>
-                        <div class="intensity-control">
+                        <div class="intensity-control" style="display: none;">
                             <span class="intensity-label">Tamaño:</span>
                             <input type="range" min="1" max="5" value="3" class="intensity-slider" id="font-size">
                             <span class="intensity-value">3</span>
@@ -220,17 +231,25 @@
 
 <!-- Contenido principal -->
 <main id="main-content">
-    <!-- Hero Section -->
+    <!-- Hero Section con foto -->
     <section class="hero" aria-labelledby="hero-title">
         <div class="container">
-            <h1 id="hero-title" class="hero-title">
-                <span class="title-line">Desarrolladora Frontend</span>
-                <span class="title-line">Especialista en Accesibilidad</span>
-            </h1>
-            <p class="hero-subtitle">Transformando datos en experiencias digitales accesibles e inclusivas</p>
-            <div class="hero-actions">
-                <a href="projects.html" class="btn btn-primary">Ver Proyectos</a>
-                <a href="about.html" class="btn btn-primary">Conóceme</a>
+            <div class="hero-profile">
+                <div class="profile-image-container">
+                    <img src="../../assets/images/foto-perfil.jpg" alt="Foto de Cristina Fuentes" class="profile-image">
+                </div>
+                <div class="hero-content">
+                    <h1 id="hero-title" class="hero-title">
+                        <span class="title-line">Hola, soy Cristina</span>
+                        <span class="title-line">Desarrolladora Frontend</span>
+                        <span class="title-line">Especialista en Accesibilidad</span>
+                    </h1>
+                    <p class="hero-subtitle">Transformando datos en experiencias digitales accesibles e inclusivas</p>
+                    <div class="hero-actions">
+                        <a href="projects.html" class="btn btn-primary">Ver Proyectos</a>
+                        <a href="about.html" class="btn btn-secondary">Conóceme</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -238,10 +257,32 @@
     <!-- Sección de introducción -->
     <section class="intro" aria-labelledby="intro-title">
         <div class="container">
-            <h2 id="intro-title" class="section-title">Hola, soy Cristina 👋</h2>
+            <h2 id="intro-title" class="section-title">Sobre Mí</h2>
             <div class="intro-content">
                 <p><strong>Analista de Datos Junior</strong> con formación en STEM y experiencia en desarrollo frontend accesible.</p>
-                <p>Combino análisis técnico con diseño centrado en el usuario para crear soluciones digitales inclusivas.</p>
+                <p>Combino análisis técnico con diseño centrado en el usuario para crear soluciones digitales inclusivas que beneficien a todos.</p>
+
+                <div class="skills-highlight">
+                    <h3>Habilidades Principales</h3>
+                    <div class="skills-tags">
+                        <span class="skill-tag">Accesibilidad Web</span>
+                        <span class="skill-tag">Desarrollo Frontend</span>
+                        <span class="skill-tag">Análisis de Datos</span>
+                        <span class="skill-tag">UX/UI</span>
+                        <span class="skill-tag">JavaScript</span>
+                        <span class="skill-tag">React</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección de proyectos destacados -->
+    <section class="featured-projects" aria-labelledby="projects-title">
+        <div class="container">
+            <h2 id="projects-title" class="section-title">Proyectos Destacados</h2>
+            <div class="projects-grid">
+                <!-- Proyectos aquí -->
             </div>
         </div>
     </section>
@@ -250,7 +291,7 @@
 <!-- Footer -->
 <footer class="footer" role="contentinfo">
     <div class="container">
-        <p>&copy; 2025 Cristina Fuentes. Todos los derechos reservados.</p>
+        <p>&copy; <span id="current-year">2025</span> Cristina Fuentes. Todos los derechos reservados.</p>
         <div class="social-links">
             <a href="https://www.linkedin.com/in/cristina-fg/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
             <a href="https://github.com/ChispiDEV" target="_blank" rel="noopener noreferrer">GitHub</a>
@@ -265,10 +306,11 @@
 </div>
 
 <!-- JavaScript -->
-<script src="assets/js/navigation.js"></script>
-<script src="assets/js/dropdowns.js"></script>
-<script src="assets/js/theme-manager.js"></script>
-<script src="assets/js/accessibility.js"></script>
-<script src="assets/js/particles.js"></script>
+<script src="../../assets/js/navigation.js"></script>
+<script src="../../assets/js/dropdowns.js"></script>
+<script src="../../assets/js/theme-manager.js"></script>
+<script src="../../assets/js/accessibility.js"></script>
+<script src="../../assets/js/footer.js"></script>
+<script src="../../assets/js/particles.js"></script>
 </body>
 </html>
